k8s/infrastructure/loki/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
